# threadmill

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: superjoe.agent.md
.github/workflows/: ci.yml  release.yml
grinder/: backends.py  executor.py
grinder/management/commands/: grinder.py
tests/: conftest.py  test_backends.py  test_command.py  test_executor.py  test_grinder_command.py  test_inspector.py  test_telemetry.py
tests/backends/: test_base.py  test_redis.py
tests/testapp/: backends.py  settings.py  tasks.py
threadmill/: __init__.py  backends.py  exceptions.py  executor.py  telemetry.py
threadmill/backends/: base.py  redis.py
threadmill/backends/lua/: acknowledge.lua  acquire.lua  mover.lua  reaper.lua
threadmill/inspector/: __init__.py  app.py  inspector.scss
threadmill/management/commands/: threadmill.py
