[build-system]
requires = ["flit_core>=3.2", "flit_scm", "wheel"]
build-backend = "flit_scm:buildapi"

[project]
name = "threadmill"
authors = [
  { name = "Johannes Maron", email = "johannes@maron.family" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["Django", "tasks", "worker"]
dynamic = ["version", "description"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Environment :: Web Environment",
  "License :: OSI Approved :: BSD License",
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Topic :: Communications :: Email",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Software Development",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: Django",
  "Framework :: Django :: 6.1",
]
requires-python = ">=3.12"
dependencies = ["django>=6.1a1"]

[project.optional-dependencies]
redis = ["redis>=5.0"]
inspector = [
    "textual>=8.2.7",
]

[project.urls]
# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
Homepage = "https://github.com/codingjoe/threadmill"
Changelog = "https://github.com/codingjoe/threadmill/releases"
Source = "https://github.com/codingjoe/threadmill"
Releasenotes = "https://github.com/codingjoe/threadmill/releases/latest"
Documentation = "https://github.com/codingjoe/threadmill/"
Issues = "https://github.com/codingjoe/threadmill/issues"
Funding = "https://github.com/sponsors/codingjoe"

[tool.flit.module]
name = "threadmill"

[tool.setuptools_scm]
write_to = "threadmill/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --cov-report=xml --cov-report=term --tb=short -rxs --benchmark-autosave --benchmark-group-by=fullname --benchmark-min-rounds=10"
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "tests.testapp.settings"
asyncio_mode = "auto"
markers = [
  "benchmark: mark benchmark tests.",
]

[tool.coverage.run]
source = ["threadmill"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
src = ["threadmill", "tests"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "S", # flake8-bandit
    "D", # pydocstyle
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
]

ignore = ["B904", "D1", "E501", "S101"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-wrap-aliases = true
known-first-party = ["threadmill", "tests"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[dependency-groups]
dev = [
  { include-group = "test" },
]
test = [
  "pytest",
  "pytest-benchmark",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-django",
  "redis>=5.0",
]
